k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goserver-service
spec:
  selector:
    app: goserver
  # type: ClusterIP   #cria um IP pro cluster
  # type: NodePort    #gera uma porta e libera em todos os nodes
  type: LoadBalancer #gera um IP para acessar a aplicação externamente
  ports:
    - name: goserver-service
      port: 80
      targetPort: 80
      protocol: TCP
      nodePort: 30001
